[package]
name = "ultimapyrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = {version="0.25.1", features=["lazy"]}
pyo3 = {version="0.17.2"}
rayon="1.5.3"
polars-arrow = {version="0.25.1"}

